crates/apollo-compiler/test_data/diagnostics/0064_extension_wrong_type.txt
Error: union member `Scalar` must be an object type
   ╭─[0064_extension_wrong_type.graphql:8:15]
   │
 8 │ union Union = Scalar | Object
   │               ───┬──  
   │                  ╰──── this is a scalar
   │ 
   │ Help: Union members must be object types.
───╯
Error: adding a union type extension, but `Scalar` is a scalar type
    ╭─[0064_extension_wrong_type.graphql:16:14]
    │
  1 │ scalar Scalar @specifiedBy(url: "https://apollographql.com")
    │        ───┬──  
    │           ╰──── type definition
    │ 
 16 │ extend union Scalar = String
    │              ───┬──  
    │                 ╰──── extension here
────╯
Error: adding an interface type extension, but `Object` is an object type
    ╭─[0064_extension_wrong_type.graphql:17:18]
    │
  5 │ type Object {
    │      ───┬──  
    │         ╰──── type definition
    │ 
 17 │ extend interface Object {
    │                  ───┬──  
    │                     ╰──── extension here
────╯
Error: adding an enum type extension, but `Intf` is an interface type
    ╭─[0064_extension_wrong_type.graphql:20:13]
    │
  2 │ interface Intf {
    │           ──┬─  
    │             ╰─── type definition
    │ 
 20 │ extend enum Intf {
    │             ──┬─  
    │               ╰─── extension here
────╯
Error: adding an object type extension, but `Input` is an input object type
    ╭─[0064_extension_wrong_type.graphql:23:13]
    │
  9 │ input Input {
    │       ──┬──  
    │         ╰──── type definition
    │ 
 23 │ extend type Input {
    │             ──┬──  
    │               ╰──── extension here
────╯
Error: adding an input object type extension, but `Enum` is an enum type
    ╭─[0064_extension_wrong_type.graphql:26:14]
    │
 12 │ enum Enum {
    │      ──┬─  
    │        ╰─── type definition
    │ 
 26 │ extend input Enum {
    │              ──┬─  
    │                ╰─── extension here
────╯

